handiling missing value and data cleaning done on all datasets.

--- a/notebook/Data_cleaning.ipynb
+++ b/notebook/Data_cleaning.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4e20a339-813a-4609-a976-930a10a24d39",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e92809b5-3604-4cc7-ae41-611c7a5ef0fa",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "078e71f4-61d0-4e42-9546-42ea3578097c",
    "metadata": {},
    "outputs": [
@@ -502,6 +502,7 @@
     }
    ],
    "source": [
+    "# checking the loaded dataframe\n",
     "print(\"Fraud Data (first 5 rows):\")\n",
     "display(df_fraud.head())\n",
     "\n",
@@ -514,8 +515,399 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fad910d4-455e-4fa0-bc8d-39595b168d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values before handling:\n",
+      "user_id           0\n",
+      "signup_time       0\n",
+      "purchase_time     0\n",
+      "purchase_value    0\n",
+      "device_id         0\n",
+      "source            0\n",
+      "browser           0\n",
+      "sex               0\n",
+      "age               0\n",
+      "ip_address        0\n",
+      "class             0\n",
+      "dtype: int64\n",
+      "\n",
+      "Missing values after handling:\n",
+      "user_id           0\n",
+      "signup_time       0\n",
+      "purchase_time     0\n",
+      "purchase_value    0\n",
+      "device_id         0\n",
+      "source            0\n",
+      "browser           0\n",
+      "sex               0\n",
+      "age               0\n",
+      "ip_address        0\n",
+      "class             0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check missing values before handling\n",
+    "print(\"Missing values before handling:\")\n",
+    "print(df_fraud.isnull().sum())\n",
+    "\n",
+    "# Apply your missing value handling function\n",
+    "df_fraud = handle_missing_values(df_fraud, method='drop')\n",
+    "\n",
+    "# Check missing values after handling\n",
+    "print(\"\\nMissing values after handling:\")\n",
+    "print(df_fraud.isnull().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8e0eb72c-8a08-4ee8-97c8-11275b71e791",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values before handling:\n",
+      "Time      0\n",
+      "V1        0\n",
+      "V2        0\n",
+      "V3        0\n",
+      "V4        0\n",
+      "V5        0\n",
+      "V6        0\n",
+      "V7        0\n",
+      "V8        0\n",
+      "V9        0\n",
+      "V10       0\n",
+      "V11       0\n",
+      "V12       0\n",
+      "V13       0\n",
+      "V14       0\n",
+      "V15       0\n",
+      "V16       0\n",
+      "V17       0\n",
+      "V18       0\n",
+      "V19       0\n",
+      "V20       0\n",
+      "V21       0\n",
+      "V22       0\n",
+      "V23       0\n",
+      "V24       0\n",
+      "V25       0\n",
+      "V26       0\n",
+      "V27       0\n",
+      "V28       0\n",
+      "Amount    0\n",
+      "Class     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check missing values before handling\n",
+    "print(\"Missing values before handling:\")\n",
+    "print(df_credit.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8940a98f-53e2-47dc-b96e-6cbef6bb880f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values before handling:\n",
+      "lower_bound_ip_address    0\n",
+      "upper_bound_ip_address    0\n",
+      "country                   0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check missing values before handling\n",
+    "print(\"Missing values before handling:\")\n",
+    "print(df_ip_country.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fa611ada-e54c-4738-866b-89f91ec364ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows in df_fraud (before removal): 0\n",
+      "Number of duplicate rows in df_fraud (after removal): 0 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check and Remove Duplicates\n",
+    "# Fraud Data\n",
+    "print(\"Number of duplicate rows in df_fraud (before removal):\", df_fraud.duplicated().sum())\n",
+    "df_fraud = remove_duplicates(df_fraud)\n",
+    "print(\"Number of duplicate rows in df_fraud (after removal):\", df_fraud.duplicated().sum(), \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b341ed4e-cb06-482f-ad95-c97d45de194f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows in df_ip_country (before removal): 0\n",
+      "Number of duplicate rows in df_ip_country (after removal): 0 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# IP Country Data\n",
+    "print(\"Number of duplicate rows in df_ip_country (before removal):\", df_ip_country.duplicated().sum())\n",
+    "df_ip_country = remove_duplicates(df_ip_country)\n",
+    "print(\"Number of duplicate rows in df_ip_country (after removal):\", df_ip_country.duplicated().sum(), \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4c08c44c-6a14-4768-95f0-5ad6bd19f51e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows in df_credit (before removal): 1081\n",
+      "Number of duplicate rows in df_credit (after removal): 0 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Credit Card Data\n",
+    "print(\"Number of duplicate rows in df_credit (before removal):\", df_credit.duplicated().sum())\n",
+    "df_credit = remove_duplicates(df_credit)\n",
+    "print(\"Number of duplicate rows in df_credit (after removal):\", df_credit.duplicated().sum(), \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "72ca2ca0-b0a7-402f-bff8-b2593c9aabb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data types in df_fraud before correction:\n",
+      "user_id             int64\n",
+      "signup_time        object\n",
+      "purchase_time      object\n",
+      "purchase_value      int64\n",
+      "device_id          object\n",
+      "source             object\n",
+      "browser            object\n",
+      "sex                object\n",
+      "age                 int64\n",
+      "ip_address        float64\n",
+      "class               int64\n",
+      "dtype: object \n",
+      "\n",
+      "Data types in df_fraud after correction:\n",
+      "user_id                    int64\n",
+      "signup_time       datetime64[ns]\n",
+      "purchase_time     datetime64[ns]\n",
+      "purchase_value             int64\n",
+      "device_id                 object\n",
+      "source                    object\n",
+      "browser                   object\n",
+      "sex                       object\n",
+      "age                        int64\n",
+      "ip_address               float64\n",
+      "class                      int64\n",
+      "dtype: object \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Correct Data Types\n",
+    "# Fraud Data\n",
+    "print(\"Data types in df_fraud before correction:\")\n",
+    "print(df_fraud.dtypes, \"\\n\")\n",
+    "\n",
+    "df_fraud = correct_data_types(\n",
+    "    df_fraud, \n",
+    "    datetime_cols=['signup_time', 'purchase_time'], \n",
+    "    numeric_cols=['age', 'purchase_value']\n",
+    ")\n",
+    "print(\"Data types in df_fraud after correction:\")\n",
+    "print(df_fraud.dtypes, \"\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28b06486-81c7-4f2e-af4c-ade970e34f21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data types in df_ip_country before correction:\n",
+      "lower_bound_ip_address    float64\n",
+      "upper_bound_ip_address      int64\n",
+      "country                    object\n",
+      "dtype: object \n",
+      "\n",
+      "Data types in df_ip_country after correction:\n",
+      "lower_bound_ip_address     int64\n",
+      "upper_bound_ip_address     int64\n",
+      "country                   object\n",
+      "dtype: object \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# IP Country Data \n",
+    "print(\"Data types in df_ip_country before correction:\")\n",
+    "print(df_ip_country.dtypes, \"\\n\")\n",
+    "\n",
+    "# Used the correct_data_types function to cast the IP columns to integers.\n",
+    "df_ip_country = correct_data_types(\n",
+    "    df_ip_country,\n",
+    "    float_to_int_cols=['lower_bound_ip_address']\n",
+    ")\n",
+    "\n",
+    "print(\"Data types in df_ip_country after correction:\")\n",
+    "print(df_ip_country.dtypes, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "154e7d39-73e9-4359-b223-10fdcf25d17f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data types in df_credit before correction:\n",
+      "Time      float64\n",
+      "V1        float64\n",
+      "V2        float64\n",
+      "V3        float64\n",
+      "V4        float64\n",
+      "V5        float64\n",
+      "V6        float64\n",
+      "V7        float64\n",
+      "V8        float64\n",
+      "V9        float64\n",
+      "V10       float64\n",
+      "V11       float64\n",
+      "V12       float64\n",
+      "V13       float64\n",
+      "V14       float64\n",
+      "V15       float64\n",
+      "V16       float64\n",
+      "V17       float64\n",
+      "V18       float64\n",
+      "V19       float64\n",
+      "V20       float64\n",
+      "V21       float64\n",
+      "V22       float64\n",
+      "V23       float64\n",
+      "V24       float64\n",
+      "V25       float64\n",
+      "V26       float64\n",
+      "V27       float64\n",
+      "V28       float64\n",
+      "Amount    float64\n",
+      "Class       int64\n",
+      "dtype: object \n",
+      "\n",
+      "Data types in df_credit after correction:\n",
+      "Time      float64\n",
+      "V1        float64\n",
+      "V2        float64\n",
+      "V3        float64\n",
+      "V4        float64\n",
+      "V5        float64\n",
+      "V6        float64\n",
+      "V7        float64\n",
+      "V8        float64\n",
+      "V9        float64\n",
+      "V10       float64\n",
+      "V11       float64\n",
+      "V12       float64\n",
+      "V13       float64\n",
+      "V14       float64\n",
+      "V15       float64\n",
+      "V16       float64\n",
+      "V17       float64\n",
+      "V18       float64\n",
+      "V19       float64\n",
+      "V20       float64\n",
+      "V21       float64\n",
+      "V22       float64\n",
+      "V23       float64\n",
+      "V24       float64\n",
+      "V25       float64\n",
+      "V26       float64\n",
+      "V27       float64\n",
+      "V28       float64\n",
+      "Amount    float64\n",
+      "Class       int64\n",
+      "dtype: object \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Credit Card Data\n",
+    "print(\"Data types in df_credit before correction:\")\n",
+    "print(df_credit.dtypes, \"\\n\")\n",
+    "\n",
+    "df_credit = correct_data_types(\n",
+    "    df_credit,\n",
+    "    numeric_cols=['Time', 'Amount']\n",
+    ")\n",
+    "\n",
+    "print(\"Data types in df_credit after correction:\")\n",
+    "print(df_credit.dtypes, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8974b573-92c0-4586-8943-5fc1e891229f",
    "metadata": {},
    "outputs": [],
    "source": []
