Normalize or scale numeric columns and Encode categorical features done.

--- a/notebook/Data_cleaning.ipynb
+++ b/notebook/Data_cleaning.ipynb
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "3601e07a-2c5b-417b-9c23-519910b3666b",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "ee9c5d92-f1e5-482a-8b8f-5ea27197a214",
    "metadata": {},
    "outputs": [],
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "442c8286-e4f1-4f8c-bb7a-f8549897e489",
    "metadata": {},
    "outputs": [
@@ -1097,8 +1097,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "906181ac-b2bf-4266-85ef-5da129f2160e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Save the Clean Data\n",
+    "df_fraud_merged.to_csv('Cleaned_Fraud_Data.csv', index=False)\n",
+    "df_credit.to_csv('Cleaned_Credit_Card_Data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "dfc492b5-e6db-44cb-84a2-06444c0d450c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Normalization/Scaling (Example)\n",
+    "scaler = StandardScaler()\n",
+    "df_fraud_merged = normalize_and_scale(\n",
+    "    df_fraud_merged, \n",
+    "    columns=['purchase_value'], \n",
+    "    scaler=scaler\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3c247e17-dd60-43fd-911f-c674735e1d5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     user_id         signup_time       purchase_time  purchase_value  \\\n",
+      "634   247547 2015-06-28 03:00:34 2015-08-09 03:57:29        0.549607   \n",
+      "635   220737 2015-01-28 14:21:11 2015-02-11 20:28:28       -1.197335   \n",
+      "636   390400 2015-03-19 20:49:09 2015-04-11 23:41:23        0.385831   \n",
+      "637    69592 2015-02-24 06:11:57 2015-05-23 16:40:14        0.986342   \n",
+      "638   174987 2015-07-07 12:58:11 2015-11-03 04:04:30        0.767974   \n",
+      "\n",
+      "         device_id  source browser sex  age    ip_address  class    ip_int  \\\n",
+      "634  KIXYSVCHIPQBR     SEO  Safari   F   30  1.677886e+07      0  16778864   \n",
+      "635  PKYOWQKWGJNJI     SEO  Chrome   F   34  1.684205e+07      0  16842046   \n",
+      "636  LVCSXLISZHVUO     Ads      IE   M   29  1.684366e+07      0  16843657   \n",
+      "637  UHAUHNXXUADJE  Direct  Chrome   F   30  1.693873e+07      0  16938733   \n",
+      "638  XPGPMOHIDRMGE     SEO  Chrome   F   37  1.697198e+07      0  16971984   \n",
+      "\n",
+      "     lower_bound_ip_address  upper_bound_ip_address    country  purchase_hour  \\\n",
+      "634              16778240.0              16779263.0  Australia              3   \n",
+      "635              16809984.0              16842751.0   Thailand             20   \n",
+      "636              16843264.0              16843775.0      China             23   \n",
+      "637              16924672.0              16941055.0      China             16   \n",
+      "638              16941056.0              16973823.0   Thailand              4   \n",
+      "\n",
+      "     purchase_day_of_week  user_transaction_count  \n",
+      "634                     6                       1  \n",
+      "635                     2                       1  \n",
+      "636                     5                       1  \n",
+      "637                     5                       1  \n",
+      "638                     1                       1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the purchase_hour, purchase_day_of_week columns and user_transaction_count column\n",
+    "print(df_fraud_merged.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5911228e-bf92-4d35-a8db-c0a3a97680b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Encode Categorical Features\n",
+    "df_fraud_merged = encode_categorical_features(\n",
+    "    df_fraud_merged, \n",
+    "    cols=['source', 'browser', 'sex']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3661dac3-da43-4792-b579-245e86cb9ece",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     user_id         signup_time       purchase_time  purchase_value  \\\n",
+      "634   247547 2015-06-28 03:00:34 2015-08-09 03:57:29        0.549607   \n",
+      "635   220737 2015-01-28 14:21:11 2015-02-11 20:28:28       -1.197335   \n",
+      "636   390400 2015-03-19 20:49:09 2015-04-11 23:41:23        0.385831   \n",
+      "637    69592 2015-02-24 06:11:57 2015-05-23 16:40:14        0.986342   \n",
+      "638   174987 2015-07-07 12:58:11 2015-11-03 04:04:30        0.767974   \n",
+      "\n",
+      "         device_id  source  browser  sex  age    ip_address  class    ip_int  \\\n",
+      "634  KIXYSVCHIPQBR       2        4    0   30  1.677886e+07      0  16778864   \n",
+      "635  PKYOWQKWGJNJI       2        0    0   34  1.684205e+07      0  16842046   \n",
+      "636  LVCSXLISZHVUO       0        2    1   29  1.684366e+07      0  16843657   \n",
+      "637  UHAUHNXXUADJE       1        0    0   30  1.693873e+07      0  16938733   \n",
+      "638  XPGPMOHIDRMGE       2        0    0   37  1.697198e+07      0  16971984   \n",
+      "\n",
+      "     lower_bound_ip_address  upper_bound_ip_address    country  purchase_hour  \\\n",
+      "634              16778240.0              16779263.0  Australia              3   \n",
+      "635              16809984.0              16842751.0   Thailand             20   \n",
+      "636              16843264.0              16843775.0      China             23   \n",
+      "637              16924672.0              16941055.0      China             16   \n",
+      "638              16941056.0              16973823.0   Thailand              4   \n",
+      "\n",
+      "     purchase_day_of_week  user_transaction_count  \n",
+      "634                     6                       1  \n",
+      "635                     2                       1  \n",
+      "636                     5                       1  \n",
+      "637                     5                       1  \n",
+      "638                     1                       1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the first few rows to verify the changes\n",
+    "print(df_fraud_merged.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7244f53-3d80-4f70-9f71-ab7f64a346ed",
    "metadata": {},
    "outputs": [],
    "source": []
