--- a/notebook/Model_building_training.ipynb
+++ b/notebook/Model_building_training.ipynb
@@ -231,8 +231,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9476b361-ccf6-49f2-9df1-cffc9ba89719",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Training and Evaluation on Credit Card Data (with SMOTE applied) ---\n",
+      "\n",
+      "Model: Logistic Regression\n",
+      "Accuracy: 0.9736721531033025\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.97      0.99     56651\n",
+      "           1       0.05      0.87      0.10        95\n",
+      "\n",
+      "    accuracy                           0.97     56746\n",
+      "   macro avg       0.53      0.92      0.54     56746\n",
+      "weighted avg       1.00      0.97      0.99     56746\n",
+      "\n",
+      "\n",
+      "Model: Decision Tree\n",
+      "Accuracy: 0.9974095090402848\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     56651\n",
+      "           1       0.35      0.64      0.45        95\n",
+      "\n",
+      "    accuracy                           1.00     56746\n",
+      "   macro avg       0.67      0.82      0.73     56746\n",
+      "weighted avg       1.00      1.00      1.00     56746\n",
+      "\n",
+      "\n",
+      "Model: Random Forest\n",
+      "Accuracy: 0.9994889507630493\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     56651\n",
+      "           1       0.91      0.77      0.83        95\n",
+      "\n",
+      "    accuracy                           1.00     56746\n",
+      "   macro avg       0.96      0.88      0.92     56746\n",
+      "weighted avg       1.00      1.00      1.00     56746\n",
+      "\n",
+      "\n",
+      "Model: Gradient Boosting\n",
+      "Accuracy: 0.9887392943996053\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      0.99     56651\n",
+      "           1       0.11      0.84      0.20        95\n",
+      "\n",
+      "    accuracy                           0.99     56746\n",
+      "   macro avg       0.56      0.92      0.60     56746\n",
+      "weighted avg       1.00      0.99      0.99     56746\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# Initialize models for the credit card dataset\n",
+    "lr_credit = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "dt_credit = DecisionTreeClassifier(random_state=42)\n",
+    "rf_credit = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "gb_credit = GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "models_credit = {\n",
+    "    \"Logistic Regression\": lr_credit,\n",
+    "    \"Decision Tree\": dt_credit,\n",
+    "    \"Random Forest\": rf_credit,\n",
+    "    \"Gradient Boosting\": gb_credit\n",
+    "}\n",
+    "\n",
+    "print(\"\\n--- Training and Evaluation on Credit Card Data (with SMOTE applied) ---\")\n",
+    "for name, model in models_credit.items():\n",
+    "    # Train the model on the balanced (resampled) training set\n",
+    "    model.fit(X_credit_train_res, y_credit_train_res)\n",
+    "    \n",
+    "    # Predict on the original (imbalanced) test set\n",
+    "    y_pred = model.predict(X_credit_test_scaled)\n",
+    "    \n",
+    "    # Evaluate the model\n",
+    "    acc = accuracy_score(y_credit_test, y_pred)\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "    print(\"Accuracy:\", acc)\n",
+    "    print(\"Classification Report:\\n\", classification_report(y_credit_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9a6c430-cdd3-4f0e-b0d2-cb3716734a4b",
    "metadata": {},
    "outputs": [],
    "source": []
