--- a/notebook/Model_building_training.ipynb
+++ b/notebook/Model_building_training.ipynb
@@ -332,8 +332,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "d9a6c430-cdd3-4f0e-b0d2-cb3716734a4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Training and Evaluation onFraud Data Dataset(with SMOTE applied) ---\n",
+      "\n",
+      "Model: Logistic Regression\n",
+      "Accuracy: 0.6766550522648084\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.67      0.79     23376\n",
+      "           1       0.18      0.69      0.29      2454\n",
+      "\n",
+      "    accuracy                           0.68     25830\n",
+      "   macro avg       0.57      0.68      0.54     25830\n",
+      "weighted avg       0.88      0.68      0.74     25830\n",
+      "\n",
+      "\n",
+      "Model: Decision Tree\n",
+      "Accuracy: 0.8934959349593496\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.93      0.94     23376\n",
+      "           1       0.45      0.57      0.51      2454\n",
+      "\n",
+      "    accuracy                           0.89     25830\n",
+      "   macro avg       0.70      0.75      0.72     25830\n",
+      "weighted avg       0.91      0.89      0.90     25830\n",
+      "\n",
+      "\n",
+      "Model: Random Forest\n",
+      "Accuracy: 0.9556329849012776\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      1.00      0.98     23376\n",
+      "           1       0.98      0.55      0.70      2454\n",
+      "\n",
+      "    accuracy                           0.96     25830\n",
+      "   macro avg       0.97      0.77      0.84     25830\n",
+      "weighted avg       0.96      0.96      0.95     25830\n",
+      "\n",
+      "\n",
+      "Model: Gradient Boosting\n",
+      "Accuracy: 0.956600851722803\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      1.00      0.98     23376\n",
+      "           1       1.00      0.55      0.70      2454\n",
+      "\n",
+      "    accuracy                           0.96     25830\n",
+      "   macro avg       0.98      0.77      0.84     25830\n",
+      "weighted avg       0.96      0.96      0.95     25830\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# Initialize models for fraud dataset\n",
+    "lr_fraud = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "dt_fraud = DecisionTreeClassifier(random_state=42)\n",
+    "rf_fraud = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "gb_fraud = GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
+    "\n",
+    "models_fraud = {\n",
+    "    \"Logistic Regression\": lr_fraud,\n",
+    "    \"Decision Tree\": dt_fraud,\n",
+    "    \"Random Forest\": rf_fraud,\n",
+    "    \"Gradient Boosting\": gb_fraud\n",
+    "}\n",
+    "\n",
+    "print(\"\\n--- Training and Evaluation onFraud Data Dataset(with SMOTE applied) ---\")\n",
+    "for name, model in models_fraud.items():\n",
+    "    # Train the model on the SMOTE-resampled training data\n",
+    "    model.fit(X_fraud_train_res, y_fraud_train_res)\n",
+    "    \n",
+    "    # Predict on the original (imbalanced) test set\n",
+    "    y_pred = model.predict(X_fraud_test_scaled)\n",
+    "    \n",
+    "    # Evaluate the model\n",
+    "    acc = accuracy_score(y_fraud_test, y_pred)\n",
+    "    print(f\"\\nModel: {name}\")\n",
+    "    print(\"Accuracy:\", acc)\n",
+    "    print(\"Classification Report:\\n\", classification_report(y_fraud_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dab88fcc-cc6c-4394-8f54-480de5f671df",
    "metadata": {},
    "outputs": [],
    "source": []
