--- a/notebook/Model_building_training.ipynb
+++ b/notebook/Model_building_training.ipynb
@@ -433,8 +433,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "dab88fcc-cc6c-4394-8f54-480de5f671df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\OneDrive\\Desktop\\KAIM\\kaim-week-02\\venv\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "MLP Credit Card Model Accuracy: 0.9991365075111389\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "\n",
+    "def create_mlp_model(input_dim):\n",
+    "    model = Sequential([\n",
+    "        Dense(64, activation='relu', input_dim=input_dim),\n",
+    "        Dense(32, activation='relu'),\n",
+    "        Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "# Build and train the MLP for the credit card dataset using SMOTE-resampled training data\n",
+    "mlp_credit = create_mlp_model(X_credit_train_res.shape[1])\n",
+    "history_mlp = mlp_credit.fit(X_credit_train_res, y_credit_train_res,\n",
+    "                             epochs=20, batch_size=32, validation_split=0.2, verbose=0)\n",
+    "\n",
+    "# Evaluate the model on the original (imbalanced) test set\n",
+    "score_mlp = mlp_credit.evaluate(X_credit_test_scaled, y_credit_test, verbose=0)\n",
+    "print(\"\\nMLP Credit Card Model Accuracy:\", score_mlp[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "89dcebac-3009-47bb-983e-69f5ba5f686d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\OneDrive\\Desktop\\KAIM\\kaim-week-02\\venv\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CNN Credit Card Model Accuracy: 0.9991893768310547\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.layers import Conv1D, MaxPooling1D, Flatten, Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "\n",
+    "# Reshape the SMOTE-resampled training data for CNN: (samples, timesteps, channels)\n",
+    "X_credit_train_res_cnn = X_credit_train_res.reshape(-1, X_credit_train_res.shape[1], 1)\n",
+    "\n",
+    "# Reshape the test data as before\n",
+    "X_credit_test_cnn = X_credit_test_scaled.reshape(-1, X_credit_test_scaled.shape[1], 1)\n",
+    "\n",
+    "def create_cnn_model(input_shape):\n",
+    "    model = Sequential([\n",
+    "        Conv1D(filters=32, kernel_size=3, activation='relu', input_shape=input_shape),\n",
+    "        MaxPooling1D(pool_size=2),\n",
+    "        Flatten(),\n",
+    "        Dense(64, activation='relu'),\n",
+    "        Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "# Create the CNN model using the input shape from the SMOTE training data\n",
+    "cnn_credit = create_cnn_model((X_credit_train_res_cnn.shape[1], 1))\n",
+    "\n",
+    "# Train the CNN model on the SMOTE-resampled training set\n",
+    "history_cnn = cnn_credit.fit(X_credit_train_res_cnn, y_credit_train_res,\n",
+    "                             epochs=20, batch_size=32, validation_split=0.2, verbose=0)\n",
+    "\n",
+    "# Evaluate the model on the original (imbalanced) test set\n",
+    "score_cnn = cnn_credit.evaluate(X_credit_test_cnn, y_credit_test, verbose=0)\n",
+    "print(\"CNN Credit Card Model Accuracy:\", score_cnn[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d25abe2f-7a15-4b8d-af1c-b8cdf3c6b7a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\OneDrive\\Desktop\\KAIM\\kaim-week-02\\venv\\Lib\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:200: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RNN Credit Card Model Accuracy: 0.9905720353126526\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.layers import SimpleRNN, Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "\n",
+    "def create_rnn_model(input_shape):\n",
+    "    model = Sequential([\n",
+    "        SimpleRNN(50, input_shape=input_shape),\n",
+    "        Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "# Reshape the SMOTE-resampled training data for RNN: (samples, timesteps, channels)\n",
+    "X_credit_train_res_rnn = X_credit_train_res.reshape(-1, X_credit_train_res.shape[1], 1)\n",
+    "\n",
+    "# Reshape the test data as before\n",
+    "X_credit_test_rnn = X_credit_test_scaled.reshape(-1, X_credit_test_scaled.shape[1], 1)\n",
+    "\n",
+    "# Create the RNN model using the input shape from the SMOTE-resampled training data\n",
+    "rnn_credit = create_rnn_model((X_credit_train_res_rnn.shape[1], 1))\n",
+    "\n",
+    "# Train the RNN model on the SMOTE-resampled training data\n",
+    "history_rnn = rnn_credit.fit(X_credit_train_res_rnn, y_credit_train_res,\n",
+    "                             epochs=20, batch_size=32, validation_split=0.2, verbose=0)\n",
+    "\n",
+    "# Evaluate the model on the original (imbalanced) test set\n",
+    "score_rnn = rnn_credit.evaluate(X_credit_test_rnn, y_credit_test, verbose=0)\n",
+    "print(\"RNN Credit Card Model Accuracy:\", score_rnn[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "038ddec7-95cf-4b3e-b56a-4fa590cf90dd",
    "metadata": {},
    "outputs": [],
    "source": []
