added model training and evaluation for Ltsm.

--- a/notebook/Model_building_training.ipynb
+++ b/notebook/Model_building_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "40af52c2-0efd-4186-a138-8f6694c537d4",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "9476b361-ccf6-49f2-9df1-cffc9ba89719",
    "metadata": {},
    "outputs": [
@@ -587,8 +587,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "038ddec7-95cf-4b3e-b56a-4fa590cf90dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\OneDrive\\Desktop\\KAIM\\kaim-week-02\\venv\\Lib\\site-packages\\keras\\src\\layers\\rnn\\rnn.py:200: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(**kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LSTM Credit Card Model Accuracy: 0.9989602565765381\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "\n",
+    "def create_lstm_model(input_shape):\n",
+    "    model = Sequential([\n",
+    "        LSTM(50, input_shape=input_shape),\n",
+    "        Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "# Reshape the SMOTE-resampled training data for LSTM: (samples, timesteps, channels)\n",
+    "X_credit_train_res_lstm = X_credit_train_res.reshape(-1, X_credit_train_res.shape[1], 1)\n",
+    "\n",
+    "# Reshape the original scaled test data as before\n",
+    "X_credit_test_lstm = X_credit_test_scaled.reshape(-1, X_credit_test_scaled.shape[1], 1)\n",
+    "\n",
+    "# Create the LSTM model using the input shape from the SMOTE-resampled training data\n",
+    "lstm_credit = create_lstm_model((X_credit_train_res_lstm.shape[1], 1))\n",
+    "\n",
+    "# Train the LSTM model on the SMOTE-resampled training data\n",
+    "history_lstm = lstm_credit.fit(X_credit_train_res_lstm, y_credit_train_res,\n",
+    "                               epochs=20, batch_size=32, validation_split=0.2, verbose=0)\n",
+    "\n",
+    "# Evaluate the model on the original (imbalanced) test set\n",
+    "score_lstm = lstm_credit.evaluate(X_credit_test_lstm, y_credit_test, verbose=0)\n",
+    "print(\"LSTM Credit Card Model Accuracy:\", score_lstm[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57d6d210-4d46-4a6c-83d3-cee91987aabc",
    "metadata": {},
    "outputs": [],
    "source": []
