added MLflow experiment tracking and model versioning.

--- a/notebook/Model_building_training.ipynb
+++ b/notebook/Model_building_training.ipynb
@@ -639,8 +639,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "57d6d210-4d46-4a6c-83d3-cee91987aabc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/02/13 10:40:25 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logged Logistic Regression with SMOTE, accuracy: 0.9736721531033025\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "with mlflow.start_run(run_name=\"CreditCard_LogisticRegression_SMOTE\"):\n",
+    "    # Log parameters and metadata\n",
+    "    mlflow.log_param(\"model\", \"Logistic Regression\")\n",
+    "    mlflow.log_param(\"scaling\", \"StandardScaler\")\n",
+    "    mlflow.log_param(\"resampling\", \"SMOTE\")\n",
+    "    \n",
+    "    # Train the model on the SMOTE-resampled training data\n",
+    "    lr_credit_mlflow = LogisticRegression(max_iter=1000, random_state=42)\n",
+    "    lr_credit_mlflow.fit(X_credit_train_res, y_credit_train_res)\n",
+    "    \n",
+    "    # Predict on the original (imbalanced) test set\n",
+    "    y_pred_mlflow = lr_credit_mlflow.predict(X_credit_test_scaled)\n",
+    "    \n",
+    "    # Calculate and log the accuracy metric\n",
+    "    acc_mlflow = accuracy_score(y_credit_test, y_pred_mlflow)\n",
+    "    mlflow.log_metric(\"accuracy\", acc_mlflow)\n",
+    "    \n",
+    "    # Log the trained model artifact\n",
+    "    mlflow.sklearn.log_model(lr_credit_mlflow, \"logistic_regression_model\")\n",
+    "    \n",
+    "    print(\"Logged Logistic Regression with SMOTE, accuracy:\", acc_mlflow)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c0f18776-ab90-47f5-beb8-add0a2bd767b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLflow Tracking URI: file:///C:/Users/HP/OneDrive/Desktop/ai2/kaim-week-08/notebook/mlruns\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "print(\"MLflow Tracking URI:\", mlflow.get_tracking_uri())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "207bd257-254c-45f1-b3de-aea1f9010e9c",
    "metadata": {},
    "outputs": [],
    "source": []
