--- a/notebook/Model_building_training.ipynb
+++ b/notebook/Model_building_training.ipynb
@@ -659,6 +659,8 @@
     }
    ],
    "source": [
+    "#using mlflow for to track experiments and log parameters\n",
+    "\n",
     "import mlflow\n",
     "import mlflow.sklearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -689,27 +691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c0f18776-ab90-47f5-beb8-add0a2bd767b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MLflow Tracking URI: file:///C:/Users/HP/OneDrive/Desktop/ai2/kaim-week-08/notebook/mlruns\n"
-     ]
-    }
-   ],
-   "source": [
-    "import mlflow\n",
-    "print(\"MLflow Tracking URI:\", mlflow.get_tracking_uri())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "207bd257-254c-45f1-b3de-aea1f9010e9c",
+   "id": "b9860494-5977-41da-98c8-3afb4f0cebf0",
    "metadata": {},
    "outputs": [],
    "source": []
